--- a/Webapp/pom.xml
+++ b/Webapp/pom.xml
@@ -2,19 +2,19 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ontariotechu.sofe3980U</groupId>
-  <artifactId>Webapp</artifactId>
+  <artifactId>BinaryCalculatorWebapp</artifactId>
   <packaging>war</packaging>
   <version>1.0.0</version>
-  <name>Webapp Maven Webapp</name>
+  <name>BinaryCalculatorWebapp Maven Webapp</name>
   <url>http://maven.apache.org</url>
-   <parent>
- 	<groupId>org.springframework.boot</groupId>
- 	<artifactId>spring-boot-starter-parent</artifactId>
- 	<version>2.1.2.RELEASE</version>
-    <relativePath/> <!-- lookup parent from repository -->
- </parent>
+  <parent>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-parent</artifactId>
+	<version>2.1.2.RELEASE</version>
+	<relativePath/> <!-- lookup parent from repository -->
+  </parent>
   <dependencies>
-		 <dependency>
+	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-web</artifactId>
 	</dependency>
@@ -27,13 +27,26 @@
 		<artifactId>spring-boot-starter-test</artifactId>
 		<scope>test</scope>
 	</dependency>	
- <dependency>
- <groupId>org.springframework.boot</groupId>
- <artifactId>spring-boot-devtools</artifactId>
- <optional>true</optional>
- </dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-devtools</artifactId>
+		<optional>true</optional>
+	</dependency>
   </dependencies>
   <build>
-    <finalName>Webapp</finalName>
+    <finalName>BinaryCalculatorWebapp</finalName>
+	<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<configuration>
+							<mainClass>com.ontariotechu.sofe3980U.Application</mainClass>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
   </build>
 </project>
